--- a/style.css
+++ b/style.css
@@ -24,24 +24,25 @@ html {
 .show-rotation-message #rotation-message {
 	display: block;
 }
-#settingsWrapper {
+#settingsDialog {
+	width: 100%;
 	position: absolute;
-	top: 0.5rem;
-	left: 0.5rem;
-	right: 0.5rem;
-	z-index: 9990;
+	z-index: 3939;
 }
 #controls {
 	display: flex;
 	flex-direction: column;
 }
-#audioPlayer {
-	position: absolute;
-	bottom: 0;
-	opacity: 1;
-	z-index: 9999;
+#mediaPlayer {
+	position: fixed;
+	top: 0;
+	left: 0;
 	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	z-index: 39;
 }
+
 button {
 	margin: 0 10px;
 	padding: 0.5em 1em;
@@ -95,7 +96,7 @@ button {
 	to {
 		opacity: 1;
 		transform: scale(1);
-		color:var(--highlight-color);
+		color: var(--highlight-color);
 	}
 }
 
