--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 #container {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: calc(100% - var(--media-control-height, 3.5rem));
 }
 #rotation-message {
 	display: none;
@@ -69,6 +69,7 @@ button {
 	bottom: 0;
 	left: 0;
 	right: 0;
+	z-index: 3930;
 }
 .karaoke-line {
 	display: flex;
